--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>실험용</title>
 </head>
 <body>
- <h1>뭐야 되네</h1>
+ <h1>TEST</h1>
+    <h4><a href="/join">회원가입 페이지</a></h4>
 </body>
 </html>
