--- a/src/main/resources/templates/account/join.html
+++ b/src/main/resources/templates/account/join.html
@@ -15,8 +15,8 @@
     </div>
     <br>
     <div>
-        <label for="ID">아이디
-            <input name="ID" type="text">
+        <label for="id">아이디
+            <input name="id" type="text">
         </label>
     </div>
     <br>
@@ -27,6 +27,7 @@
     </div>
     <br>
     <button type="submit">등록하기</button>
+    <a href="/">돌아가기</a>
 </form>
 </body>
 </html>
