--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>실험용</title>
 </head>
 <body>
- <h1>TEST</h1>
-    <h4><a href="/join">회원가입 페이지</a></h4>
+<th:block th:if="${session.loginName !=null}">
+    <h1>INDEX PAGE - [[${session.loginName}]]님 로그인</h1>
+</th:block>
+
+<th:block th:if="${session.loginName == null}">
+    <h1>INDEX PAGE 로그인 필요</h1>
+</th:block>
+    <h4><a href="/join">회원가입 페이지</a></h4><br>
+ <a href="/login">로그인 페이지</a>
 </body>
 </html>
