--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,5 +14,12 @@
 </th:block>
     <h4><a href="/join">회원가입 페이지</a></h4><br>
  <a href="/login">로그인 페이지</a>
+<br>
+<br>
+<a href="/logout">로그아웃</a>
+<br>
+<br>
+<a href="/board">게시글 페이지</a>
 </body>
+
 </html>
