--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,21 +5,24 @@
     <title>실험용</title>
 </head>
 <body>
-<th:block th:if="${session.loginName !=null}">
-    <h1>INDEX PAGE - [[${session.loginName}]]님 로그인</h1>
-</th:block>
+    <th:block th:if="${session.loginName !=null}">
+        <h1>INDEX PAGE - [[${session.loginName}]]님 로그인</h1>
+    </th:block>
 
-<th:block th:if="${session.loginName == null}">
-    <h1>INDEX PAGE 로그인 필요</h1>
-</th:block>
-    <h4><a href="/join">회원가입 페이지</a></h4><br>
- <a href="/login">로그인 페이지</a>
-<br>
-<br>
-<a href="/logout">로그아웃</a>
-<br>
-<br>
-<a href="/board">게시글 페이지</a>
+    <th:block th:if="${session.loginName == null}">
+        <h1>INDEX PAGE 로그인 필요</h1>
+    </th:block>
+    <h4>
+        <a href="/join">회원가입 페이지</a>
+    </h4>
+    <br>
+    <a href="/login">로그인 페이지</a>
+    <br>
+    <br>
+    <a href="/logout">로그아웃</a>
+    <br>
+    <br>
+    <a href="/boards">게시글 페이지</a>
 </body>
 
 </html>
