게시글 수정
조회수 증가 안하던 부분 수정

--- a/src/main/resources/templates/board/board-edit.html
+++ b/src/main/resources/templates/board/board-edit.html
@@ -25,11 +25,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>게시글 상세 페이지</h1>
-        <form action="/boards" method="post" th:object="${boardDetail}">
+        <h1>게시글 <span style="color: red">수정</span> 페이지</h1>
+        <form action="/boards/update" method="post" th:object="${boardDetail}">
             <div class="write-info-wrapper">
                 <label>작성자</label>
                 <span th:text="*{createAccountId}">작성자 아이디</span>
+                <input type="hidden" name="createAccountId" id="creatAccountId" th:field="*{createAccountId}">
                 <br>
                 <br>
                 <label>작성 날짜</label>
@@ -41,17 +42,17 @@
                     <label for="title">게시글 제목</label>
                 </h4>
                 <input type="hidden" name="idx" id="idx" readonly th:field="*{idx}">
-                <input type="text" name="title" id="title" readonly th:field="*{title}">
+                <input type="text" name="title" id="title" required th:field="*{title}">
             </div>
             <div class="contents-wrapper">
                 <h4>
                     <label for="contents">게시글 내용</label>
                 </h4>
-                <textarea name="contents" id="contents" cols="30" rows="10" readonly th:field="*{contents}"></textarea>
+                <textarea name="contents" id="contents" cols="30" rows="10" required th:field="*{contents}"></textarea>
             </div>
             <th:block th:if="${session.loginId != null && session.loginId == boardDetail.createAccountId}">
                 <div class="btn-wrapper">
-                <button type="button" onclick="editPage()">수정</button>
+                <button type="submit" >업데이트</button>
                 </div>
             </th:block>
         </form>
