--- a/src/main/resources/templates/board/board-list.html
+++ b/src/main/resources/templates/board/board-list.html
@@ -29,7 +29,8 @@
 <head>
     <meta charset="UTF-8">
     <title>게시판</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -40,10 +41,10 @@
             <button onclick="location.href='/boards/write'">게시글 쓰기</button>
             <br>
             <br>
-            <button onclick="location.href='/'">홈으로</button>
 
         </div>
     </th:block>
+    <button onclick="location.href='/'">홈으로</button>
     <div class="table-container">
         <table class="board-table">
             <colgroup>
@@ -68,46 +69,48 @@
 </div>
 </body>
 <script>
-    window.onload = function (){
+    window.onload = function () {
         renderingBoards();
     }
-    function renderingBoards(){
+
+    function renderingBoards() {
 
         let url = "/boards/list";
 
         $.ajax({
-            url : url,
+            url: url,
             method: "GET",
             timeout: 5000,
-            contentType : "application/json",
-            success: function (data, a, b){
+            contentType: "application/json",
+            success: function (data, a, b) {
                 console.log(a);
                 console.log(b);
 
                 _cb_renderingBoard(data);
             },
-            error: function (a, b){
+            error: function (a, b) {
                 console.log(a);
                 console.log(b);
                 alert("에러");
             }
         });
     }
-    function _cb_renderingBoard(data){
+
+    function _cb_renderingBoard(data) {
         var tbody = document.querySelector(".board-table tbody")
 
         tbody.innerHTML = "";
 
-        var html ="";
+        var html = "";
 
-        for (var i = 0; i<data.length;i++){
-            html+= "<tr>";
-            html+= "<td>" + data[i].idx + "</td>";
-            html+= "<td><a href='/boards/"+data[i].idx+"/detail'>"+ data[i].title+ "</a></td>";
-            html+= "<td>" + data[i].views + "</td>";
-            html+= "<td>" + data[i].createAccountId + "</td>";
-            html+= "<td>" + data[i].createdAt + "</td>";
-            html+= "</tr>";
+        for (var i = 0; i < data.length; i++) {
+            html += "<tr>";
+            html += "<td>" + data[i].idx + "</td>";
+            html += "<td><a href='/boards/" + data[i].idx + "/detail'>" + data[i].title + "</a></td>";
+            html += "<td>" + data[i].views + "</td>";
+            html += "<td>" + data[i].createAccountId + "</td>";
+            html += "<td>" + data[i].createdAt + "</td>";
+            html += "</tr>";
 
         }
         tbody.innerHTML = html;
