--- a/src/main/resources/templates/board/board-edit.html
+++ b/src/main/resources/templates/board/board-edit.html
@@ -30,7 +30,7 @@
             <div class="write-info-wrapper">
                 <label>작성자</label>
                 <span th:text="*{createAccountId}">작성자 아이디</span>
-                <input type="hidden" name="createAccountId" id="creatAccountId" th:field="*{createAccountId}">
+                <input type="hidden" name="createAccountId" id="createAccountId" th:field="*{createAccountId}">
                 <br>
                 <br>
                 <label>작성 날짜</label>
